Actualiza `release.yml` para depender de ejecuciones exitosas del flujo de trabajo y corrige el manejo de listas en pruebas de `ProjectStoreZipTest`.